Add tooltips to buttons and fix initial torrent listing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,10 +46,18 @@ html, body {
   &.large {
     width: 300px;
     flex-shrink: 0.1;
+    text-align: left;
   }
 
   &.small {
     width: 120px;
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+
+  &.tiny {
+    width: 30px;
+    flex-grow: 0;
     flex-shrink: 0;
   }
 }
